crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_editors_n_s_data__remove_editors_n_s_data-2.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_editors_n_s_data.rs
expression: "test_config(r#\"{ \"removeEditorsNSData\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:sodipodi=\"http://inkscape.sourceforge.net/DTD/sodipodi-0.dtd\">\n    <sodipodi:namedview>\n        ...\n    </sodipodi:namedview>\n\n    <path d=\"...\" sodipodi:nodetypes=\"cccc\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <path d="..."/>
</svg>
